finished the menubar and maed it so ned to be logged in to access blogs users/:id and /users

--- a/7-Router-CostumHooks-CSS-Webpack/7.10-Redux-Refactor/frontend/todo.txt
+++ b/7-Router-CostumHooks-CSS-Webpack/7.10-Redux-Refactor/frontend/todo.txt
@@ -2,8 +2,7 @@
 
 Need to remove extra blog posts that are deleted from the blogschema but not from the list of blogs the users own.
 
-
-17.17 add navigation bar to top
+Have to remake tests, as much as like them can't be asked rn
 
 17.18 add ability to make comments
 
